updated font size for tech-stack section on cards to ensure it's never spilling onto two lines

--- a/css/style.scss
+++ b/css/style.scss
@@ -61,6 +61,10 @@ header {
             margin-bottom: 1em;
             padding: 1em;
 
+            #tech-stack {
+                font-size: max(90%, 10px);
+            }
+
             h5 {
                 text-align: center;
             }
